// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate options should throw an error on the "chunkFilename" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.chunkFilename should be one of these:
   string | function
   Details:
    * options.chunkFilename should be a string.
    * options.chunkFilename should be an instance of function."
`;

exports[`validate options should throw an error on the "filename" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate options should throw an error on the "ignoreOrder" option with "1" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.ignoreOrder should be a boolean."
`;

exports[`validate options should throw an error on the "insert" option with "{}" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.insert should be one of these:
   string | function
   -> Inserts \`<link>\` at the given position (https://github.com/webpack-contrib/mini-css-extract-plugin#insert).
   Details:
    * options.insert should be a string.
    * options.insert should be an instance of function."
`;

exports[`validate options should throw an error on the "insert" option with "1" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.insert should be one of these:
   string | function
   -> Inserts \`<link>\` at the given position (https://github.com/webpack-contrib/mini-css-extract-plugin#insert).
   Details:
    * options.insert should be a string.
    * options.insert should be an instance of function."
`;

exports[`validate options should throw an error on the "insert" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.insert should be one of these:
   string | function
   -> Inserts \`<link>\` at the given position (https://github.com/webpack-contrib/mini-css-extract-plugin#insert).
   Details:
    * options.insert should be a string.
    * options.insert should be an instance of function."
`;
